Fix spacing btw featured image and title

--- a/assets/css/ie.css
+++ b/assets/css/ie.css
@@ -4448,6 +4448,7 @@ body:not(.single) .site-main > article:last-of-type .entry-footer {
 	max-width: 100%;
 	margin-left: auto;
 	margin-right: auto;
+	margin-top: 60px;
 }
 
 @media only screen and (min-width: 482px){
