--- a/style-rtl.css
+++ b/style-rtl.css
@@ -7,7 +7,7 @@ Author URI: https://wordpress.org/
 Description:
 Requires at least: 5.3
 Tested up to: 5.5
-Requires PHP: 7.2
+Requires PHP: 5.6
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
@@ -3215,6 +3215,7 @@ body:not(.single) .site-main > article:last-of-type .entry-footer {
 	max-width: 100%;
 	margin-right: auto;
 	margin-left: auto;
+	margin-top: calc(2.0 * var(--global--spacing-vertical));
 }
 
 /**
